Agregado más css de bootstrap
Se agrega contenido CSS de bootstrap

--- a/assets/css/estilos.css
+++ b/assets/css/estilos.css
@@ -9,6 +9,7 @@ background-color: aquamarine;
 background-color: blue;
 color: red;
 }
-aside{
-    color: orange;
+
+.link-referencia{
+    color: rgb(0, 0, 0);
 }
